Bug 934750 - Don't cancel content touch events unless APZC consumes them [r=jimm,kats]

This is necessary for our "cross-slide" hack to work.  We need to send
input to both content and APZC until the input passes the pan threshold, so
that the start page can use touch events without disabling async panning.

In the long run we hope to use "touch-action: pan-x" for this and no longer
rely on this hack.